--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,4 +17,5 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="title_activity_scanner">扫描二维码</string>
     <string name="hello_world">Hello world!</string>
+    <string name="title_activity_beam">BeamActivity</string>
 </resources>
